[package]
name = "nexus"
version = "0.1.0"
edition = "2021"

[dependencies]
# The heavy hitters for ARES-X
duckdb = { version = "1.1", features = ["bundled"] }
geo = "0.28"
aes-gcm = "0.10" 
argon2 = "0.5"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = { version = "1.7", features = ["derive"] }